@@ -1,3 +1,9 @@
+Tue Dec 23 00:06:15 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/unittests/query_id.py,xappy/unittests/query_id_test.py:
+	  Rename to query_id.py, and test cases where only a single ID is
+	  supplied.
+
 Tue Dec 23 00:04:15 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Add query_id() function to search for
